--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
     // TODO (01) Add lifecycle-extensions gradle
 }
